--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -3,7 +3,7 @@ include ../navigation-bar/navigation-bar
 include ../social-media/social-media
 include ../button/button
 
-mixin header(options)
+mixin header(options = {})
   - 
     const {} = options;
 
