--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -2,8 +2,8 @@ extends ../base/base
 
 block body
   div(class=["index"])
-    p(class="index__title") Layout1
+    p(class=["index__title"]) Layout1
     ul(class=["index__refs-list"])
       li(class=["index__item"])
         a(class=["index__ref"] href="./page1.html")
-          span(class="index__ref-text") Page1
+          span(class=["index__ref-text"]) Page1
