--- a/src/components/social-media/social-media.scss
+++ b/src/components/social-media/social-media.scss
@@ -2,6 +2,7 @@
   line-height: 0rem;
 
   &__ref {
+    cursor: pointer;
     margin: 0rem 1.045rem;
 
     &:first-of-type {
@@ -10,6 +11,12 @@
 
     &:last-of-type {
       margin-right: 0rem;
+    }
+  }
+
+  &__image-svg {
+    &:hover .social-media__image-path {
+      fill: rgb(97, 136, 255);
     }
   }
 }
