--- a/index.css
+++ b/index.css
@@ -61,24 +61,34 @@
   src: url(src/assets/fonts/NunitoSans/nunito-sans-bold.eot);
   src: url(src/assets/fonts/NunitoSans/nunito-sans-bold.woff2) format("woff2"), url(src/assets/fonts/NunitoSans/nunito-sans-bold.woff) format("woff"), url(src/assets/fonts/NunitoSans/nunito-sans-bold.ttf) format("truetype"); }
 
-/* $color-gray-blue: rgb(173, 181, 189);
-$color-blue: rgb(139, 164, 249);
-$color-purple: rgba(188, 156, 255, 1);
-$color-green: rgba(111, 207, 151, 1);
-$color-dark-shade-5: rgba(31, 32, 65, 0.05);
-$color-dark-shade-10: rgba(31, 32, 65, 0.1);
-$color-dark-shade-25: rgba(31, 32, 65, 0.25);
-$color-dark-shade-30: rgba(31, 32, 65, 0.3);
-$color-dark-shade-50: rgba(31, 32, 65, 0.5);
-$color-dark-shade-75: rgba(31, 32, 65, 0.75);
-$color-dark-shade-100: rgba(31, 32, 65, 1);
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: bold;
+  src: url(src/assets/fonts/Roboto/roboto-bold.eot);
+  src: url(src/assets/fonts/Roboto/roboto-bold.woff2) format("woff2"), url(src/assets/fonts/Roboto/roboto-bold.woff) format("woff"), url(src/assets/fonts/Roboto/roboto-bold.ttf) format("truetype"); }
 
-$gradient-purple-to-blue: linear-gradient(to bottom, rgb(188, 156, 255), rgb(139, 164, 249));
-$gradient-purple-to-blue-50: linear-gradient(to bottom, rgba(188, 156, 255, 0.5), rgba(139, 164, 249, 0.5));
-$gradient-purple-to-blue-25: linear-gradient(to bottom, rgba(188, 156, 255, 0.25), rgba(139, 164, 249, 0.25));
-$gradient-green-to-turquoise: linear-gradient(180deg, rgb(111, 207, 151) 0%, rgb(102, 210, 234) 100%);
-$gradient-yellow-to-peach: linear-gradient(180deg, rgb(255, 227, 156) 0%, rgb(255, 186, 156) 100%);
-$gradient-gray-to-blue: linear-gradient(180deg, rgb(145, 145, 145) 0%, rgb(61, 73, 117) 100%); */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  src: url(src/assets/fonts/Roboto/roboto-500.eot);
+  src: url(src/assets/fonts/Roboto/roboto-500.woff2) format("woff2"), url(src/assets/fonts/Roboto/roboto-500.woff) format("woff"), url(src/assets/fonts/Roboto/roboto-500.ttf) format("truetype"); }
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: normal;
+  src: url(src/assets/fonts/Roboto/roboto-regular.eot);
+  src: url(src/assets/fonts/Roboto/roboto-regular.woff2) format("woff2"), url(src/assets/fonts/Roboto/roboto-regular.woff) format("woff"), url(src/assets/fonts/Roboto/roboto-regular.ttf) format("truetype"); }
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  src: url(src/assets/fonts/Roboto/roboto-300.eot);
+  src: url(src/assets/fonts/Roboto/roboto-300.woff2) format("woff2"), url(src/assets/fonts/Roboto/roboto-300.woff) format("woff"), url(src/assets/fonts/Roboto/roboto-300.ttf) format("truetype"); }
+
 *,
 *:after,
 *:before {
