Добавил блок customers.

--- a/src/components/hero-image/hero-image.pug
+++ b/src/components/hero-image/hero-image.pug
@@ -20,3 +20,4 @@ mixin hero-image(options = {})
         | congue vituperata.
       span(class=["hero-image__play-button"])
         +arrow()
+    //-div(class=["hero-image__chart"])
