--- a/src/pages/page1/page1.scss
+++ b/src/pages/page1/page1.scss
@@ -1,5 +1,6 @@
 @import '../../components/header/header.scss';
 @import '../../components/hero-image/hero-image.scss';
+@import '../../components/customers/customers.scss';
 @import '../../components/footer/footer.scss';
 
 .page1 {
