частично сверстал блок со смартфонами.

--- a/src/assets/constants.scss
+++ b/src/assets/constants.scss
@@ -3,3 +3,5 @@ $color-blue1: rgb(94, 129, 254);
 $color-blue2: rgb(97, 136, 255);
 $color-blue3: rgb(89, 130, 231);
 $color-blue3: rgb(76, 133, 255);
+
+$color-light-blue-gray: rgb(173, 180, 210);
