--- a/src/pages/page1/page1.scss
+++ b/src/pages/page1/page1.scss
@@ -1,6 +1,7 @@
 @import '../../components/header/header.scss';
 @import '../../components/hero-image/hero-image.scss';
 @import '../../components/customers/customers.scss';
+@import '../../components/plan-and-manage/plan-and-manage.scss';
 @import '../../components/footer/footer.scss';
 
 .page1 {
