--- a/src/components/button/button.pug
+++ b/src/components/button/button.pug
@@ -1,18 +1,21 @@
+include ./images/arrow
+
 mixin button(options = {})
   - 
     const {
       backgroundColor = "",
       color = "",
-      buttonType = "a",
+      buttonType = "button",
       text = "click me",
       url = "",
-      isForHeader = false,
+      hasBorder = false,
+      hasArrow = false,
     } = options;
     const containerClasses = [];
     const textClasses = [];
 
     containerClasses.push(backgroundColor ? `button_background-color_${backgroundColor}` : "");
-    textClasses.push(isForHeader ? "button__text_in-header" : "");
+    containerClasses.push(hasBorder ? "button_with-border" : "")
     textClasses.push(color ? `button__text_color_${color}` : "");
 
   div(class=["button"].concat(containerClasses))
@@ -20,10 +23,19 @@ mixin button(options = {})
       a(class=["button__basis"] 
         href=(url ? url : "https://errorpage.com") target=(url ? "_blank" : "") rel=(url ? "noopener noreferrer" : ""))
         span(class=["button__text"].concat(textClasses))= text
+        - if(hasArrow)
+          span(class=["button__arrow"])
+            +arrow()
     - else if(buttonType === "button")
       button(class=["button__basis"])
         span(class=["button__text"].concat(textClasses))= text
+        - if(hasArrow)
+          span(class=["button__arrow"])
+            +arrow()
     - else if(buttonType === "submit")
       label(class=["button__basis"])
         input(class=["button__submit"] type="submit")
         span(class=["button__text"].concat(textClasses))= text
+        - if(hasArrow)
+          span(class=["button__arrow"])
+            +arrow()
