--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -9,6 +9,10 @@
   position: relative;
   background: rgb(255, 255, 255);
 
+  &_with-border {
+    border: 1px solid rgb(209, 209, 228);
+  }
+
   &_border-radius {
     &_2px {
       border-radius: 2px;
@@ -22,6 +26,7 @@
   &_background-color {
     &_transparent {
       background: transparent;
+      color: rgb(173, 180, 210);
     }
 
     &_white {
@@ -51,7 +56,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     color: white;
     background: transparent;
@@ -65,15 +70,10 @@
 
   &__text {
     cursor: pointer;
-    width: 100%;
-    /* margin: 0rem 1.1875rem 0rem 1.1875rem; */
     background: transparent;
-    text-align: center;
     color: white;
     font-weight: bold;
     font-size: 0.8125rem;
-    line-height: 1rem;
-    /* text-transform: uppercase; */
     white-space: nowrap;
     overflow: hidden;
 
@@ -90,6 +90,10 @@
         color: rgb(165, 181, 217);
       }
 
+      &_light-gray-blue2 {
+        color: rgb(173, 180, 210);
+      }
+
       &_gray-blue {
         color: rgb(115, 130, 163);
       }
@@ -102,6 +106,13 @@
         color: rgb(58, 121, 255);
       }
     }
+  }
+
+  &__arrow {
+    cursor: pointer;
+    text-align: center;
+    line-height: 0;
+    margin-left: 0.625rem;
   }
 
   &__submit {
